--- a/public/css/costumStyle.css
+++ b/public/css/costumStyle.css
@@ -118,7 +118,7 @@ p, small, span , li ,ol{
 	border-radius: 10px;
 	padding:20px 10px;
 	box-shadow:inset 0 0 0 1px rgba(255,255,255,0.73), 0 0 0 1px rgba(0,0,0,0.16);
-	width: 952px !important;
+
 }
 .noWidth{
 	width: auto !important;
@@ -505,7 +505,7 @@ footer #love p{
 	text-align:left;
     display: inline-block;
 	vertical-align:text-top;
-    width: 955px;
+    width: 100%;
     background:#ffffff;
 }
 .block:hover{
@@ -650,15 +650,14 @@ footer #love p{
  .form textarea,
  .form input[type=text],
  .form input[type=password]{
- 	min-width:250px;
- 	min-height:32px;
+ 	min-height:35px ;
  	line-height:32px;
+	
  	padding: 0 10px;
- 	background: #fff;
+ 	background:  rgb(53, 48, 48);
  	display: inline-block;
  	color: #000;
  	text-shadow:none;
-	box-shadow:inset 0 0 0 1px rgba(255,255,255,0.33), 0 0 0 1px rgba(0,0,0,0.46);
 	border: none;
  }
   .form textarea:hover,
@@ -807,6 +806,7 @@ footer #love p{
     position: relative;
     top: 2px;
     width: 984px;
+	background-color: white;
     box-shadow:  inset  0 -1px 0 #fff , inset 0 -2px 0 #BABABA;
 }
 #page-tabs ul {
@@ -892,7 +892,7 @@ footer #love p{
 }
 #content-page > div{
 	display: none;
-	background: #E2E2E2;
+	background: #E3E2E2;
 	padding: 15px 0 0 0;
     box-shadow:  inset  0 0 0 1px #BABABA , inset 0 0 0 2px #FFF;
 }
@@ -1101,7 +1101,7 @@ footer #love p{
  */
 .input-groupe{
  	margin: auto;
- 	width: 800px;
+ 	min-width: 400px;
 	margin-bottom: 25px;
 	padding: 0px 15px;
 }
@@ -1133,7 +1133,6 @@ footer #love p{
 }
 .input-groupe .inputs{
 	display: inline-block;
-    width: 78.6885%;
     vertical-align: top;
 }
 .input-groupe .inputs input[type=text],
@@ -1190,8 +1189,8 @@ footer #love p{
 	padding: 4px;
 }
 .input-groupe .inputs textarea{
-	width: 450px;
-	min-width: 450px;
+
+	min-width: 300px;
 	min-height: 120px;
 }
 .input-groupe .inputs textarea.too-big{
@@ -1200,8 +1199,7 @@ footer #love p{
 	resize: vertical;
 }
 .input-groupe .inputs textarea.medium{
-	width: 660px;
-	min-width: 660px;
+	min-width: 200px;
 	resize: vertical;
 }
 .input-groupe .inputs input.too-big{
@@ -1209,8 +1207,8 @@ footer #love p{
 	min-width: 694px;
 }
 .input-groupe .inputs input.medium{
-	width: 504px;
-	min-width: 504px;
+	
+	min-width: 400px;
 }
 .input-groupe .inputs input[type=text].small,
 .input-groupe .inputs input[type=password].small,
@@ -1949,7 +1947,7 @@ footer #love p{
 .add-comments img{
 	border-radius:4px;
 	display: inline-block;
-	vertical-align: top;
+	vertical-align: left;
 	border: 1px solid rgba(0,0,0,0.3);
 	width:45px;
 }
@@ -1994,8 +1992,10 @@ footer #love p{
 	padding: 5px;
 	background: #fbfbfb;
 	border: 1px solid transparent;
-	box-shadow: none;    
-	min-width: 892px;
+	box-shadow: none;
+	width: max-content;    
+	min-width: 300px;
+	min-height: 70px;
 	outline: none;
 	font-size: 12px;
 	line-height: 18px;
@@ -2084,7 +2084,7 @@ footer #love p{
 	margin-left: 10px;
 	position: relative;
 	border: 1px solid rgba(0,0,0,0.3);
-	width: 900px;
+	min-width: 350px;
 }
 .comments.block .content:before,
 .comments.block .content:after{
@@ -2892,16 +2892,10 @@ a.arrowRight:after{
     padding-bottom: 10px;
     margin-top: 8px;
     padding-top: 10px;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
-    border-top: 1px solid rgba(0,0,0,0.2);
-}
- 
-#post-frame .meat{
-    float: left;
     color: #B2A89C;
     font-size: 14px;
     position: relative;
-    width: 885px;
+    width: 100%;
     line-height: 18px;
     text-align: left;
     height: 36px;
@@ -2988,14 +2982,18 @@ a.arrowRight:after{
  */
 #post-frame-big,
 #post-frame-small {
-    background: none repeat-x scroll left bottom #E6E2EB;
+    background-color:  #E6E2EB;
     border-radius: 5px 5px 5px 5px;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     display: inline-block;
     padding: 10px;
-    width: 450px;
+	min-width: 200px;
+	max-width: 300px;
     margin: 5px;
     vertical-align: top;
+}
+#post-frame-small:hover {
+ border: solid 1px black
 }
 #post-frame-big {
     width: 900px;
@@ -3054,7 +3052,6 @@ a.arrowRight:after{
     color: #B2A89C;
     font-size: 12px;
     position: relative;
-    width: 390px;
     line-height: 18px;
     text-align: left;
     height: 36px;
@@ -3087,8 +3084,7 @@ a.arrowRight:after{
     border-radius: 4px;
     float: left;
     padding: 3px;
-    width: 40px;
-    height: 40px;
+  
 }
 
 #post-frame-big .user-bar .right a.control.comments-icon,
@@ -3699,14 +3695,13 @@ a.action:active{
 
 #chat_box{
 	position:fixed;
-	width:465px;
 	border:1px solid #232323;
 	background:#dfdfdf;
 	padding:0;
 	margin:0;
 	box-shadow: inset 0 0 0 1px #fff;
 	left: 170px;
-	bottom: 0;
+	bottom: 37px;
 	z-index:25;
 }
 #chat_box .title{
@@ -3854,18 +3849,19 @@ height:40px;
 	background:#ededed;
 }
 #chat_toggle:hover{
-background-color:grey;
+background-color:white;
+color:black
 }
 #chat_toggle{
 	position: fixed;
 	left: 0;
-	top: 10px;
+	top: 30px;
 	bottom: 0;
 	width: 100px;
 display:block;
 height:30px;
 color:white;
-background-color:black;
+background-color:#12B800;
 	border-right: 1px solid rgba(0,0,0,0.5);
 	box-shadow: 1px 0 0 rgba(255,255,255,0.3), 2px 0 9px rgba(0,0,0,0.5);
 }
@@ -4138,8 +4134,9 @@ background-color:black;
   bottom: -10px;
   width: 0;
   height: 2px;
-  background-color: #56baed;
+  background-color: #12B800;
   content: "";
+
   transition: width 0.2s;
 }
 
@@ -4148,7 +4145,7 @@ background-color:black;
 }
 
 .underlineHover:hover:after{
-  width: 100%;
+  width: 90%;
 }
 
 
@@ -4201,7 +4198,7 @@ background-color:black;
   #formContent {
 	-webkit-border-radius: 10px 10px 10px 10px;
 	border-radius: 10px 10px 10px 10px;
-	border-top:solid 2px black;
+	border-top:solid 3px #12B800;
 	background: #fff;
 	padding: 30px;
 	width: 90%;
