--- a/public/css/costumStyle.css
+++ b/public/css/costumStyle.css
@@ -2154,27 +2154,11 @@ footer #love p{
 
 }
 
-.comments.block .content .quote  .content{
-	margin: 10px;
-	padding-left: 60px;
-	min-height: 60px;
-	max-width: 815px;
+.quote{
 	border:1px solid rgba(0,0,0,0.2);
 	background: #D3E9FF;
 }
-.comments.block .content .quote  .content:before{
-	content:' ';
-	width:60px;
-	height: 60px;
-	background: url(../images/icons/quote.png) no-repeat center center ;
-	display:inline-block;
-	vertical-align: top;
-	position:absolute;
-	left:0px;
-	top: 0px;
-	border:none;
-	transform:none;
-}
+
 .comments.block .content .quote  .content:after{
 	display: none;
 }
